<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/setttingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/reset" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reset_your_steps"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    />
    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_the_step_tracker"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <ImageButton
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:id="@+id/settingsButton"
    android:layout_width="141dp"
    android:layout_height="60dp"
    android:layout_marginTop="350dp"
    android:layout_gravity="end"
    app:srcCompat="@android:drawable/ic_menu_manage"
    android:contentDescription="@string/todo"/>
</androidx.appcompat.widget.LinearLayoutCompat>