<?xml version="1.0" encoding="utf-8"?>

<LinearLayout tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/title2"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/stepaholic"
        android:layout_gravity="center"
        android:textSize="30sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mileTitle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/miles"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/stepTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_steps"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/KiloTitleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/kilometres"
            android:textSize="22sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/kiloDisplay"
        android:layout_width="130dp"
        android:layout_height="114dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/_0"
        android:textSize="40sp"
        tools:ignore="NestedWeights" />
    <TextView
        android:id="@+id/stepsDisplay"
        android:layout_width="152dp"
        android:layout_height="114dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="40sp"
        android:layout_weight="1"
        />

        <TextView
            android:layout_weight="1"
            android:id="@+id/mileDisplay"
            android:layout_width="130dp"
            android:layout_height="114dp"
            android:text="@string/_0"
            android:textSize="40sp"
            android:gravity="center" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:contentDescription="@string/todo"
        android:paddingEnd="5dp"
        android:paddingStart="0dp"
        app:srcCompat="@android:drawable/ic_menu_manage" />
</LinearLayout>
